# waitmate

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/waitmate/: api.rs  app.rs  http.rs  log.rs  mod.rs  net.rs  std.rs  thread.rs
web/: package.json  tailwind.js
web/public/: index.html  manifest.json
web/src/: Api.tsx  App.tsx  EventCard.tsx  EventList.tsx  LoadableComponent.tsx  Model.tsx
