[package]
name = "waitmate"
version = "0.1.0"
authors = ["Mark Riley <mark@eucleo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1"
config = { version = "0.9.3", features = ["toml", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rocksdb = "0.14.0"
toml = "0.5"
dirs = "2.0.2"
crossbeam = "0.7.3"
zmq = "0.9"
lazy_static = "1.4.0"
getopts = "0.2"