[package]
name = "waitmate"
version = "0.1.0"
authors = ["Mark Riley <mark@eucleo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1"
config = { version = "0.9.3", features = ["toml", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rocksdb = "0.19.0"
toml = "0.5"
dirs = "2.0.2"
crossbeam = "0.7.3"
zmq = "0.9"
lazy_static = "1.4.0"
clap = "3.0.0-beta.1"
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "2.0.0"
actix-cors = "0.2.0"
actix-web-actors = "2.0.0"
tempfile = "3.1.0"
log = "0.4.8"
env_logger = "0.7.1"
signal-hook = "0.1.15"
rust-embed = "5.5.1"
mime_guess = "2.0.3"
